--- a/code/src/AttendeeSite/package.json
+++ b/code/src/AttendeeSite/package.json
@@ -7,6 +7,13 @@
   "scripts": {
     "start": "node provisionComposer.js"
   },
+  "follow-redirects": 
+    {
+    "version": "1.14.1",
+    "resolved": "https://registry.npmjs.org/follow-redirects/-/follow-redirects-1.14.1.tgz",
+    "integrity": "sha512-HWqDgT7ZEkqRzBvc2s64vSZ/hfOceEol3ac/7tKwzuvEyWx3/4UegXh5oBOIotkGsObyk3xznnSRVADBgWSQVg=="
+  },
+  
   "dependencies": {
     "@azure/arm-appinsights": "^2.1.0",
     "@azure/arm-botservice": "^1.0.0",
@@ -19,11 +26,7 @@
     "fs-extra": "^8.1.0",
     "minimist": "^1.2.5",
     "ora": "^4.0.4",
-    "request-promise": "^4.2.5",
-   "follow-redirects": {
-   "version": "1.14.1",
-   "resolved": "https://registry.npmjs.org/follow-redirects/-/follow-redirects-1.14.1.tgz",
-   "integrity": "sha512-HWqDgT7ZEkqRzBvc2s64vSZ/hfOceEol3ac/7tKwzuvEyWx3/4UegXh5oBOIotkGsObyk3xznnSRVADBgWSQVg=="
-   }
+    "request-promise": "^4.2.5"
+   
   }
 }
